crates/capi/include/edgefirst/schemas.h

/* ============================================================================
 * Memory Management
 * ========================================================================= */

/**
 * @brief Free a byte buffer returned by any <package>_*_encode() function.
 * @param bytes Pointer previously returned by an encode function (NULL is safe)
 * @param len Length that was returned alongside the pointer
 *
 * Passing NULL is a no-op. Passing any pointer not returned by an encode
 * function is undefined behaviour.
 */
void edgefirst_schemas_bytes_free(uint8_t* bytes, size_t len);
/** @brief Opaque builder handle for mavros_msgs_estimator_status_t messages. */
typedef struct mavros_msgs_estimator_status_builder_s mavros_msgs_estimator_status_builder_t;
mavros_msgs_estimator_status_builder_t* mavros_msgs_estimator_status_builder_new(void);
void mavros_msgs_estimator_status_builder_free(mavros_msgs_estimator_status_builder_t* b);
void mavros_msgs_estimator_status_builder_set_stamp(mavros_msgs_estimator_status_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_estimator_status_builder_set_frame_id(mavros_msgs_estimator_status_builder_t* b, const char* s);
void mavros_msgs_estimator_status_builder_set_attitude_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_velocity_horiz_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_velocity_vert_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pos_horiz_rel_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pos_horiz_abs_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pos_vert_abs_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pos_vert_agl_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_const_pos_mode_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pred_pos_horiz_rel_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_pred_pos_horiz_abs_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_gps_glitch_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
void mavros_msgs_estimator_status_builder_set_accel_error_status_flag(mavros_msgs_estimator_status_builder_t* b, bool v);
int  mavros_msgs_estimator_status_builder_encode_into(mavros_msgs_estimator_status_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_extended_state_t messages. */
typedef struct mavros_msgs_extended_state_builder_s mavros_msgs_extended_state_builder_t;
mavros_msgs_extended_state_builder_t* mavros_msgs_extended_state_builder_new(void);
void mavros_msgs_extended_state_builder_free(mavros_msgs_extended_state_builder_t* b);
void mavros_msgs_extended_state_builder_set_stamp(mavros_msgs_extended_state_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_extended_state_builder_set_frame_id(mavros_msgs_extended_state_builder_t* b, const char* s);
void mavros_msgs_extended_state_builder_set_vtol_state(mavros_msgs_extended_state_builder_t* b, uint8_t v);
void mavros_msgs_extended_state_builder_set_landed_state(mavros_msgs_extended_state_builder_t* b, uint8_t v);
int  mavros_msgs_extended_state_builder_encode_into(mavros_msgs_extended_state_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_sys_status_t messages. */
typedef struct mavros_msgs_sys_status_builder_s mavros_msgs_sys_status_builder_t;
mavros_msgs_sys_status_builder_t* mavros_msgs_sys_status_builder_new(void);
void mavros_msgs_sys_status_builder_free(mavros_msgs_sys_status_builder_t* b);
void mavros_msgs_sys_status_builder_set_stamp(mavros_msgs_sys_status_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_sys_status_builder_set_frame_id(mavros_msgs_sys_status_builder_t* b, const char* s);
void mavros_msgs_sys_status_builder_set_sensors_present(mavros_msgs_sys_status_builder_t* b, uint32_t v);
void mavros_msgs_sys_status_builder_set_sensors_enabled(mavros_msgs_sys_status_builder_t* b, uint32_t v);
void mavros_msgs_sys_status_builder_set_sensors_health(mavros_msgs_sys_status_builder_t* b, uint32_t v);
void mavros_msgs_sys_status_builder_set_load(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_voltage_battery(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_current_battery(mavros_msgs_sys_status_builder_t* b, int16_t v);
void mavros_msgs_sys_status_builder_set_battery_remaining(mavros_msgs_sys_status_builder_t* b, int8_t v);
void mavros_msgs_sys_status_builder_set_drop_rate_comm(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_errors_comm(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_errors_count1(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_errors_count2(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_errors_count3(mavros_msgs_sys_status_builder_t* b, uint16_t v);
void mavros_msgs_sys_status_builder_set_errors_count4(mavros_msgs_sys_status_builder_t* b, uint16_t v);
int  mavros_msgs_sys_status_builder_encode_into(mavros_msgs_sys_status_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_state_t messages. */
typedef struct mavros_msgs_state_builder_s mavros_msgs_state_builder_t;
mavros_msgs_state_builder_t* mavros_msgs_state_builder_new(void);
void mavros_msgs_state_builder_free(mavros_msgs_state_builder_t* b);
void mavros_msgs_state_builder_set_stamp(mavros_msgs_state_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_state_builder_set_frame_id(mavros_msgs_state_builder_t* b, const char* s);
void mavros_msgs_state_builder_set_connected(mavros_msgs_state_builder_t* b, bool v);
void mavros_msgs_state_builder_set_armed(mavros_msgs_state_builder_t* b, bool v);
void mavros_msgs_state_builder_set_guided(mavros_msgs_state_builder_t* b, bool v);
void mavros_msgs_state_builder_set_manual_input(mavros_msgs_state_builder_t* b, bool v);
int  mavros_msgs_state_builder_set_mode(mavros_msgs_state_builder_t* b, const char* s);
void mavros_msgs_state_builder_set_system_status(mavros_msgs_state_builder_t* b, uint8_t v);
int  mavros_msgs_state_builder_encode_into(mavros_msgs_state_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_status_text_t messages. */
typedef struct mavros_msgs_status_text_builder_s mavros_msgs_status_text_builder_t;
mavros_msgs_status_text_builder_t* mavros_msgs_status_text_builder_new(void);
void mavros_msgs_status_text_builder_free(mavros_msgs_status_text_builder_t* b);
void mavros_msgs_status_text_builder_set_stamp(mavros_msgs_status_text_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_status_text_builder_set_frame_id(mavros_msgs_status_text_builder_t* b, const char* s);
void mavros_msgs_status_text_builder_set_severity(mavros_msgs_status_text_builder_t* b, uint8_t v);
int  mavros_msgs_status_text_builder_set_text(mavros_msgs_status_text_builder_t* b, const char* s);
int  mavros_msgs_status_text_builder_encode_into(mavros_msgs_status_text_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_gps_raw_t messages. */
typedef struct mavros_msgs_gps_raw_builder_s mavros_msgs_gps_raw_builder_t;
mavros_msgs_gps_raw_builder_t* mavros_msgs_gps_raw_builder_new(void);
void mavros_msgs_gps_raw_builder_free(mavros_msgs_gps_raw_builder_t* b);
void mavros_msgs_gps_raw_builder_set_stamp(mavros_msgs_gps_raw_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_gps_raw_builder_set_frame_id(mavros_msgs_gps_raw_builder_t* b, const char* s);
void mavros_msgs_gps_raw_builder_set_fix_type(mavros_msgs_gps_raw_builder_t* b, uint8_t v);
void mavros_msgs_gps_raw_builder_set_lat(mavros_msgs_gps_raw_builder_t* b, int32_t v);
void mavros_msgs_gps_raw_builder_set_lon(mavros_msgs_gps_raw_builder_t* b, int32_t v);
void mavros_msgs_gps_raw_builder_set_alt(mavros_msgs_gps_raw_builder_t* b, int32_t v);
void mavros_msgs_gps_raw_builder_set_eph(mavros_msgs_gps_raw_builder_t* b, uint16_t v);
void mavros_msgs_gps_raw_builder_set_epv(mavros_msgs_gps_raw_builder_t* b, uint16_t v);
void mavros_msgs_gps_raw_builder_set_vel(mavros_msgs_gps_raw_builder_t* b, uint16_t v);
void mavros_msgs_gps_raw_builder_set_cog(mavros_msgs_gps_raw_builder_t* b, uint16_t v);
void mavros_msgs_gps_raw_builder_set_satellites_visible(mavros_msgs_gps_raw_builder_t* b, uint8_t v);
void mavros_msgs_gps_raw_builder_set_alt_ellipsoid(mavros_msgs_gps_raw_builder_t* b, int32_t v);
void mavros_msgs_gps_raw_builder_set_h_acc(mavros_msgs_gps_raw_builder_t* b, uint32_t v);
void mavros_msgs_gps_raw_builder_set_v_acc(mavros_msgs_gps_raw_builder_t* b, uint32_t v);
void mavros_msgs_gps_raw_builder_set_vel_acc(mavros_msgs_gps_raw_builder_t* b, uint32_t v);
void mavros_msgs_gps_raw_builder_set_hdg_acc(mavros_msgs_gps_raw_builder_t* b, int32_t v);
void mavros_msgs_gps_raw_builder_set_yaw(mavros_msgs_gps_raw_builder_t* b, uint16_t v);
void mavros_msgs_gps_raw_builder_set_dgps_numch(mavros_msgs_gps_raw_builder_t* b, uint8_t v);
void mavros_msgs_gps_raw_builder_set_dgps_age(mavros_msgs_gps_raw_builder_t* b, uint32_t v);
int  mavros_msgs_gps_raw_builder_encode_into(mavros_msgs_gps_raw_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);
/** @brief Opaque builder handle for mavros_msgs_timesync_status_t messages. */
typedef struct mavros_msgs_timesync_status_builder_s mavros_msgs_timesync_status_builder_t;
mavros_msgs_timesync_status_builder_t* mavros_msgs_timesync_status_builder_new(void);
void mavros_msgs_timesync_status_builder_free(mavros_msgs_timesync_status_builder_t* b);
void mavros_msgs_timesync_status_builder_set_stamp(mavros_msgs_timesync_status_builder_t* b, int32_t sec, uint32_t nanosec);
int  mavros_msgs_timesync_status_builder_set_frame_id(mavros_msgs_timesync_status_builder_t* b, const char* s);
void mavros_msgs_timesync_status_builder_set_remote_timestamp_ns(mavros_msgs_timesync_status_builder_t* b, uint64_t v);
void mavros_msgs_timesync_status_builder_set_observed_offset_ns(mavros_msgs_timesync_status_builder_t* b, int64_t v);
void mavros_msgs_timesync_status_builder_set_estimated_offset_ns(mavros_msgs_timesync_status_builder_t* b, int64_t v);
void mavros_msgs_timesync_status_builder_set_round_trip_time_ms(mavros_msgs_timesync_status_builder_t* b, float v);
int  mavros_msgs_timesync_status_builder_encode_into(mavros_msgs_timesync_status_builder_t* b, uint8_t* buf, size_t cap, size_t* out_len);