crates/capi/tests/geometry_mavros_builder_smoke.rs


    fn mavros_msgs_estimator_status_builder_new() -> *mut mavros_msgs_estimator_status_builder_t;
    fn mavros_msgs_estimator_status_builder_free(b: *mut mavros_msgs_estimator_status_builder_t);
    fn mavros_msgs_estimator_status_builder_set_stamp(
        b: *mut mavros_msgs_estimator_status_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_estimator_status_builder_set_frame_id(
        b: *mut mavros_msgs_estimator_status_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_estimator_status_builder_set_attitude_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_velocity_horiz_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_velocity_vert_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pos_horiz_rel_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pos_horiz_abs_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pos_vert_abs_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pos_vert_agl_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_const_pos_mode_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pred_pos_horiz_rel_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_pred_pos_horiz_abs_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_gps_glitch_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_set_accel_error_status_flag(
        b: *mut mavros_msgs_estimator_status_builder_t,
        v: bool,
    );
    fn mavros_msgs_estimator_status_builder_encode_into(
        b: *mut mavros_msgs_estimator_status_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_extended_state_builder_new() -> *mut mavros_msgs_extended_state_builder_t;
    fn mavros_msgs_extended_state_builder_free(b: *mut mavros_msgs_extended_state_builder_t);
    fn mavros_msgs_extended_state_builder_set_stamp(
        b: *mut mavros_msgs_extended_state_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_extended_state_builder_set_frame_id(
        b: *mut mavros_msgs_extended_state_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_extended_state_builder_set_vtol_state(
        b: *mut mavros_msgs_extended_state_builder_t,
        v: u8,
    );
    fn mavros_msgs_extended_state_builder_set_landed_state(
        b: *mut mavros_msgs_extended_state_builder_t,
        v: u8,
    );
    fn mavros_msgs_extended_state_builder_encode_into(
        b: *mut mavros_msgs_extended_state_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_sys_status_builder_new() -> *mut mavros_msgs_sys_status_builder_t;
    fn mavros_msgs_sys_status_builder_free(b: *mut mavros_msgs_sys_status_builder_t);
    fn mavros_msgs_sys_status_builder_set_stamp(
        b: *mut mavros_msgs_sys_status_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_sys_status_builder_set_frame_id(
        b: *mut mavros_msgs_sys_status_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_sys_status_builder_set_sensors_present(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u32,
    );
    fn mavros_msgs_sys_status_builder_set_sensors_enabled(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u32,
    );
    fn mavros_msgs_sys_status_builder_set_sensors_health(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u32,
    );
    fn mavros_msgs_sys_status_builder_set_load(b: *mut mavros_msgs_sys_status_builder_t, v: u16);
    fn mavros_msgs_sys_status_builder_set_voltage_battery(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_current_battery(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: i16,
    );
    fn mavros_msgs_sys_status_builder_set_battery_remaining(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: i8,
    );
    fn mavros_msgs_sys_status_builder_set_drop_rate_comm(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_errors_comm(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_errors_count1(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_errors_count2(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_errors_count3(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_set_errors_count4(
        b: *mut mavros_msgs_sys_status_builder_t,
        v: u16,
    );
    fn mavros_msgs_sys_status_builder_encode_into(
        b: *mut mavros_msgs_sys_status_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_state_builder_new() -> *mut mavros_msgs_state_builder_t;
    fn mavros_msgs_state_builder_free(b: *mut mavros_msgs_state_builder_t);
    fn mavros_msgs_state_builder_set_stamp(
        b: *mut mavros_msgs_state_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_state_builder_set_frame_id(
        b: *mut mavros_msgs_state_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_state_builder_set_connected(b: *mut mavros_msgs_state_builder_t, v: bool);
    fn mavros_msgs_state_builder_set_armed(b: *mut mavros_msgs_state_builder_t, v: bool);
    fn mavros_msgs_state_builder_set_guided(b: *mut mavros_msgs_state_builder_t, v: bool);
    fn mavros_msgs_state_builder_set_manual_input(b: *mut mavros_msgs_state_builder_t, v: bool);
    fn mavros_msgs_state_builder_set_mode(
        b: *mut mavros_msgs_state_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_state_builder_set_system_status(b: *mut mavros_msgs_state_builder_t, v: u8);
    fn mavros_msgs_state_builder_encode_into(
        b: *mut mavros_msgs_state_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_status_text_builder_new() -> *mut mavros_msgs_status_text_builder_t;
    fn mavros_msgs_status_text_builder_free(b: *mut mavros_msgs_status_text_builder_t);
    fn mavros_msgs_status_text_builder_set_stamp(
        b: *mut mavros_msgs_status_text_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_status_text_builder_set_frame_id(
        b: *mut mavros_msgs_status_text_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_status_text_builder_set_severity(
        b: *mut mavros_msgs_status_text_builder_t,
        v: u8,
    );
    fn mavros_msgs_status_text_builder_set_text(
        b: *mut mavros_msgs_status_text_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_status_text_builder_encode_into(
        b: *mut mavros_msgs_status_text_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_gps_raw_builder_new() -> *mut mavros_msgs_gps_raw_builder_t;
    fn mavros_msgs_gps_raw_builder_free(b: *mut mavros_msgs_gps_raw_builder_t);
    fn mavros_msgs_gps_raw_builder_set_stamp(
        b: *mut mavros_msgs_gps_raw_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_gps_raw_builder_set_frame_id(
        b: *mut mavros_msgs_gps_raw_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_gps_raw_builder_set_fix_type(b: *mut mavros_msgs_gps_raw_builder_t, v: u8);
    fn mavros_msgs_gps_raw_builder_set_lat(b: *mut mavros_msgs_gps_raw_builder_t, v: i32);
    fn mavros_msgs_gps_raw_builder_set_lon(b: *mut mavros_msgs_gps_raw_builder_t, v: i32);
    fn mavros_msgs_gps_raw_builder_set_alt(b: *mut mavros_msgs_gps_raw_builder_t, v: i32);
    fn mavros_msgs_gps_raw_builder_set_eph(b: *mut mavros_msgs_gps_raw_builder_t, v: u16);
    fn mavros_msgs_gps_raw_builder_set_epv(b: *mut mavros_msgs_gps_raw_builder_t, v: u16);
    fn mavros_msgs_gps_raw_builder_set_vel(b: *mut mavros_msgs_gps_raw_builder_t, v: u16);
    fn mavros_msgs_gps_raw_builder_set_cog(b: *mut mavros_msgs_gps_raw_builder_t, v: u16);
    fn mavros_msgs_gps_raw_builder_set_satellites_visible(
        b: *mut mavros_msgs_gps_raw_builder_t,
        v: u8,
    );
    fn mavros_msgs_gps_raw_builder_set_alt_ellipsoid(b: *mut mavros_msgs_gps_raw_builder_t, v: i32);
    fn mavros_msgs_gps_raw_builder_set_h_acc(b: *mut mavros_msgs_gps_raw_builder_t, v: u32);
    fn mavros_msgs_gps_raw_builder_set_v_acc(b: *mut mavros_msgs_gps_raw_builder_t, v: u32);
    fn mavros_msgs_gps_raw_builder_set_vel_acc(b: *mut mavros_msgs_gps_raw_builder_t, v: u32);
    fn mavros_msgs_gps_raw_builder_set_hdg_acc(b: *mut mavros_msgs_gps_raw_builder_t, v: i32);
    fn mavros_msgs_gps_raw_builder_set_yaw(b: *mut mavros_msgs_gps_raw_builder_t, v: u16);
    fn mavros_msgs_gps_raw_builder_set_dgps_numch(b: *mut mavros_msgs_gps_raw_builder_t, v: u8);
    fn mavros_msgs_gps_raw_builder_set_dgps_age(b: *mut mavros_msgs_gps_raw_builder_t, v: u32);
    fn mavros_msgs_gps_raw_builder_encode_into(
        b: *mut mavros_msgs_gps_raw_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn mavros_msgs_timesync_status_builder_new() -> *mut mavros_msgs_timesync_status_builder_t;
    fn mavros_msgs_timesync_status_builder_free(b: *mut mavros_msgs_timesync_status_builder_t);
    fn mavros_msgs_timesync_status_builder_set_stamp(
        b: *mut mavros_msgs_timesync_status_builder_t,
        sec: i32,
        nsec: u32,
    );
    fn mavros_msgs_timesync_status_builder_set_frame_id(
        b: *mut mavros_msgs_timesync_status_builder_t,
        s: *const c_char,
    ) -> i32;
    fn mavros_msgs_timesync_status_builder_set_remote_timestamp_ns(
        b: *mut mavros_msgs_timesync_status_builder_t,
        v: u64,
    );
    fn mavros_msgs_timesync_status_builder_set_observed_offset_ns(
        b: *mut mavros_msgs_timesync_status_builder_t,
        v: i64,
    );
    fn mavros_msgs_timesync_status_builder_set_estimated_offset_ns(
        b: *mut mavros_msgs_timesync_status_builder_t,
        v: i64,
    );
    fn mavros_msgs_timesync_status_builder_set_round_trip_time_ms(
        b: *mut mavros_msgs_timesync_status_builder_t,
        v: f32,
    );
    fn mavros_msgs_timesync_status_builder_encode_into(
        b: *mut mavros_msgs_timesync_status_builder_t,
        buf: *mut u8,
        cap: usize,
        out_len: *mut usize,
    ) -> i32;

    fn edgefirst_schemas_bytes_free(ptr: *mut u8, len: usize);
}
